syntax = "proto3";

package sensordata;

option go_package = "blink-yadp/internal/proto/sensordata;sensordata";

import "google/protobuf/timestamp.proto";

// Data sample for a single sensor
message SensorData {
    string id = 1;
    google.protobuf.Timestamp timestamp = 2;  // timestamp with sub-second precision
    uint32 sensor_id = 3;
    float value = 4;
    string metadata = 5;
}

// A batch of sensor readings
message SensorDataBatch {
    repeated SensorData items = 1;
}

// Acknowledgement from the server to the client
message Ack {
    string message = 1;
}

// This service is implemented by the ingestor and called by the sensor(s)
service SensorIngestor {
    rpc SendSensorData (SensorData) returns (Ack);
    rpc SendSensorBatch (SensorDataBatch) returns (Ack);
}